finance/actual.middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: actual-redirect-https
  namespace: finance
spec:
  redirectScheme:
    scheme: https
    permanent: true
