finance/actual.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  labels:
    app: actual
  namespace: finance
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: actual
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: actual
    spec:
      nodeSelector:
        disktype: usb
      volumes:
      - name: actual-data
        persistentVolumeClaim:
          claimName: actual-pvc-data
      containers:
        - env:
            - name: TZ
              value: Asia/Jerusalem
          image: jlongster/actual-server:1.0.3-alpine
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 5006
            initialDelaySeconds: 30
            periodSeconds: 5
          name: actual
          ports:
          - containerPort: 5006
            name: webui
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
          - mountPath: /data
            name: actual-data
      restartPolicy: Always
