finance/actual.service.yml
apiVersion: v1
kind: Service
metadata:
  name: actual
  labels:
    app: actual
  namespace: finance
spec:
  selector:
    app: actual
  ports:
    - port: 5006
      protocol: TCP
      targetPort: 5006
      name: webui
  type: NodePort
