finance/actual.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: finance
  name: actual
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: finance-actual-redirect-https@kubernetescrd
spec:
  rules:
  - host: actual.arloz.dahan.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: actual
            port:
              name: webui
